[package]
name = "cami-benches"
version = "0.1.0"
edition = "2018"

# this is so that `cargo bench` doesn't attempt to run lib_benches
autobenches = false

[features]
alloc = ["cami/alloc"]
deref_pure = ["cami/deref_pure"]
std = ["alloc", "cami/std"]

[dependencies]

cami = { path = "../cami", version = "0.0.2", features = ["transmute", "debug"] }
# criterion **could** be in [dev-dependencies], but [dev-dependencies] can't be "optional".
criterion = { version = "0.5.1", optional = true }
once_cell = "1.19.0"

[dev-dependencies]
iai-callgrind = { version = "0.11.0", features = ['client_requests_defs'] }

# @TODO real_blackbox is on NIGHTLY only - is this depending on rustc channel?
# criterion = { version = "0.5.1", features=['real_blackbox'] }

fastrand = { version = "2.0.2" }

# TODO?
#
# ref-cast = "1.0"

[profile.bench]
debug = true

# Benches. KEEP them in alphabetical order.

[[bench]]
name = "alloc-btreeset-u8"
harness = false
required-features = ["alloc", "criterion"]

[[bench]]
name = "alloc-vec-str-iai"
harness = false
required-features = ["alloc", "criterion"]

[[bench]]
name = "alloc-vec-str-criterion"
harness = false
required-features = ["alloc", "criterion"]

[[bench]]
name = "alloc-vec-string"
harness = false
required-features = ["alloc", "criterion"]

[[bench]]
name = "alloc-vec-u8_slice"
harness = false
required-features = ["alloc", "criterion"]

[[bench]]
name = "alloc-vec-u8"
harness = false
required-features = ["alloc", "criterion"]

[[bench]]
name = "stack-slice-u8"
harness = false
required-features = ["criterion"]

[lints.rust]
#warnings = "allow"
