[package]
name = "cami-benches"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

# this is so that `cargo bench` doesn't attempt to run lib_benches
# autobenches = false

[features]
alloc = ["cami/alloc"]
deref_pure = ["cami/deref_pure"]
std = ["alloc", "cami/std"]

[dependencies]

cami = { path = "../cami", version = "0.0.2", features = ["transmute", "debug"] }

criterion = { version = "0.5.1", optional = true }

# iai-callgrind = { version = "0.11.0", features = ['client_requests_defs'], optional = true }
iai-callgrind = { version = "0.11.0", optional = true }

# For now this is the only random generator being used. But it's an optional dependency, so we can
# switch to another easily. See our 'Random' trait.
fastrand = { version = "2.0.2", optional = true  }

# TODO?
#
# ref-cast = "1.0"

[profile.bench]
debug = true

# Benches. KEEP them in alphabetical order.

[[bench]]
name = "alloc-btreeset-u8"
harness = false
required-features = ["alloc", "criterion"]

[[bench]]
name = "alloc-vec-str-iai"
harness = false
required-features = ["alloc"]

[[bench]]
name = "alloc-vec-str-criterion"
harness = false
required-features = ["alloc", "criterion"]

[[bench]]
name = "alloc-vec-string"
harness = false
required-features = ["alloc", "criterion"]

[[bench]]
name = "alloc-vec-u8_slice"
harness = false
required-features = ["alloc", "criterion"]

[[bench]]
name = "alloc-vec-u8"
harness = false
required-features = ["alloc", "criterion"]

[[bench]]
name = "stack-slice-u8"
harness = false
required-features = ["criterion"]

[[tests]]
name = "01"

[lints.rust]
warnings = "allow"
